slurm-29.out
  File "/home/rice/jmc32/DNN_for_Pt_Assignment-master/DNN_Hyperparameters/Hyperasexamplerun.py", line 85
    model.add(Dense({{choice(1}}))
                              ^
SyntaxError: invalid syntax
